fix collapse all and expand all

--- a/PageMenu/PageMenu/formmenu.scss
+++ b/PageMenu/PageMenu/formmenu.scss
@@ -78,7 +78,7 @@ Doco at:
         content: "+ ";
     }
 
-    ul {
+    &+ul {
         display: none;
     }
 
@@ -87,7 +87,7 @@ Doco at:
             content: "- ";
         }
 
-        ul {
+        &+ul {
             display: block;
         }
     }
